--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "svgo": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.7",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.1"
